--- a/index.html
+++ b/index.html
@@ -480,7 +480,11 @@
 
             <p>
                 <b>
-                    Pre-Classical Folliccanese had six noun cases that combined with four grammatical genders to represent various grammatical constructions. Noun and adjective declension would go as
+                    Pre-Classical Folliccanese had six noun cases that combined with four grammatical genders to represent various grammatical constructions. Not all nouns could take each gender
+                    as only sapient nouns (such as doctor, magician, woman, man) could take the masculine or feminine genders, while all other nouns had to take either the animate or inanimate genders.
+                    Sapient nouns could take the animate gender if they described groups of both men and women, or the gender of the follicle was unknown (e.g. doctor for hire, doctor would be in the
+                    animate gender because the employer does not know whether or not a male or a female would be hired for the role)
+                    Noun and adjective declension would go as
                     follows:
                 </b>
             </p>
@@ -492,6 +496,13 @@
                     </th>
                 </tr>
             </table>
+
+            <p>
+                <b>
+                    While noun and adjective declension was awfully similar to one another, there was one key difference. Nouns that took the animate or inanimate genders would not take
+                    an animate or inanimate prefix, but adjectives would. The animacy of a noun would be memorized by a speaker of Pre-Classical Folliccanese. 
+                </b>
+            </p>
 
         </div>
 
