--- a/index.html
+++ b/index.html
@@ -500,9 +500,97 @@
             <p>
                 <b>
                     While noun and adjective declension was awfully similar to one another, there was one key difference. Nouns that took the animate or inanimate genders would not take
-                    an animate or inanimate prefix, but adjectives would. The animacy of a noun would be memorized by a speaker of Pre-Classical Folliccanese. 
+                    an animate or inanimate prefix, but adjectives would. The animacy of a noun would be memorized by a speaker of Pre-Classical Folliccanese. Here is the noun declension system:
                 </b>
             </p>
+
+            <table style="border: none;">
+                <tr>
+
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="text-wrap-mode: nowrap;">
+                            <tr>
+                                <th colspan="2">Plurality</th>
+                            </tr>
+                            <tr>
+                                <th>Number</th>
+                                <th>Prefix</th>
+                            </tr>
+                            <tr>
+                                <td>singular</td>
+                                <td>Ø</td>
+                            </tr>
+                            <tr>
+                                <td>dual</td>
+                                <td>duplicate the first syllable</td>
+                            </tr>
+                            <tr>
+                                <td>Plural</td>
+                                <td>xi(r)-</td>
+                            </tr>
+                        </table>
+                    </td>
+                    
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="text-wrap-mode: nowrap;">
+                            <tr>
+                                <th colspan="2">Gender</th>
+                            </tr>
+                            <tr>
+                                <th>Gender</th>
+                                <th>Prefix</th>
+                            </tr>
+                            <tr>
+                                <td>masculine</td>
+                                <td>u(r)-</td>
+                            </tr>
+                            <tr>
+                                <td>feminine</td>
+                                <td>y(r)-</td>
+                            </tr>
+                            <tr>
+                                <td>other</td>
+                                <td>Ø</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td style="background-color: antiquewhite; border: none; text-wrap-mode: nowrap;">
+                        <table>
+                            <tr>
+                                <th colspan="2">Case</th>
+                            </tr>
+                            <tr>
+                                <th>Case</th>
+                                <th>Suffix</th>
+                            </tr>
+                            <tr>
+                                <th>Nominative</th>
+                                <td>Ø</td>
+                            </tr>
+                            <tr>
+                                <th>Accusative</th>
+                                <td>-nõ</td>
+                            </tr>
+                            <tr>
+                                <th>Genitive</th>
+                                <td>-fa</td>
+                            </tr>
+                            <tr>
+                                <th>Dative</th>
+                                <td>-mæ̃</td>
+                            </tr>
+                            <tr>
+                                <th>Adpositional</th>
+                                <td>-næ̃fa</td>
+                            </tr>
+                            <tr>
+                                <th>Instrumental</th>
+                                <td>-(n)u</td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
 
         </div>
 
