--- a/index.html
+++ b/index.html
@@ -517,15 +517,15 @@
                                 <th>Prefix</th>
                             </tr>
                             <tr>
-                                <td>singular</td>
+                                <th>Singular</th>
                                 <td>Ø</td>
                             </tr>
                             <tr>
-                                <td>dual</td>
+                                <th>Dual</th>
                                 <td>duplicate the first syllable</td>
                             </tr>
                             <tr>
-                                <td>Plural</td>
+                                <th>Plural</th>
                                 <td>xi(r)-</td>
                             </tr>
                         </table>
@@ -541,15 +541,15 @@
                                 <th>Prefix</th>
                             </tr>
                             <tr>
-                                <td>masculine</td>
+                                <th>Masculine</th>
                                 <td>u(r)-</td>
                             </tr>
                             <tr>
-                                <td>feminine</td>
+                                <th>Feminine</th>
                                 <td>y(r)-</td>
                             </tr>
                             <tr>
-                                <td>other</td>
+                                <th>Other</th>
                                 <td>Ø</td>
                             </tr>
                         </table>
