--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
             <p>
                 <b>
-                    While noun and adjective declension was awfully similar to one another, there was one key difference. Nouns that took the animate or inanimate genders would not take
+                    While noun and adjective declension were awfully similar to one another, there was one key difference. Nouns that took the animate or inanimate genders would not take
                     an animate or inanimate prefix, but adjectives would. The animacy of a noun would be memorized by a speaker of Pre-Classical Folliccanese. Here is the noun declension system:
                 </b>
             </p>
