--- a/index.html
+++ b/index.html
@@ -592,6 +592,104 @@
                 </tr>
             </table>
 
+            <p>
+                <b>
+                    Adjective declension would go as follows:
+                </b>
+            </p>
+
+            <table style="border: none;">
+                <tr>
+
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="text-wrap-mode: nowrap;">
+                            <tr>
+                                <th colspan="2">Plurality</th>
+                            </tr>
+                            <tr>
+                                <th>Number</th>
+                                <th>Prefix</th>
+                            </tr>
+                            <tr>
+                                <th>Singular</th>
+                                <td>Ø</td>
+                            </tr>
+                            <tr>
+                                <th>Dual</th>
+                                <td>sa(r)-</td>
+                            </tr>
+                            <tr>
+                                <th>Plural</th>
+                                <td>xi(r)-</td>
+                            </tr>
+                        </table>
+                    </td>
+                    
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="text-wrap-mode: nowrap;">
+                            <tr>
+                                <th colspan="2">Gender</th>
+                            </tr>
+                            <tr>
+                                <th>Gender</th>
+                                <th>Prefix</th>
+                            </tr>
+                            <tr>
+                                <th>Masculine</th>
+                                <td>u(r)-</td>
+                            </tr>
+                            <tr>
+                                <th>Feminine</th>
+                                <td>y(r)-</td>
+                            </tr>
+                            <tr>
+                                <th>Animate</th>
+                                <td>xý(r)-</td>
+                            </tr>
+                            <tr>
+                                <th>Inanimate</th>
+                                <td>Ø</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td style="background-color: antiquewhite; border: none; text-wrap-mode: nowrap;">
+                        <table>
+                            <tr>
+                                <th colspan="2">Case</th>
+                            </tr>
+                            <tr>
+                                <th>Case</th>
+                                <th>Suffix</th>
+                            </tr>
+                            <tr>
+                                <th>Nominative</th>
+                                <td>Ø</td>
+                            </tr>
+                            <tr>
+                                <th>Accusative</th>
+                                <td>-nõ</td>
+                            </tr>
+                            <tr>
+                                <th>Genitive</th>
+                                <td>-fa</td>
+                            </tr>
+                            <tr>
+                                <th>Dative</th>
+                                <td>-mæ̃</td>
+                            </tr>
+                            <tr>
+                                <th>Adpositional</th>
+                                <td>-næ̃fa</td>
+                            </tr>
+                            <tr>
+                                <th>Instrumental</th>
+                                <td>-(n)u</td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+
         </div>
 
 </body>
