--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
             <p>
                 <b>
                     Now what do all of these fancy cases do? The nominative case marks the subject of a clause, the accusative marks the direct object (the noun that receives the object
-                    e.g. I kicked the <i>ball</i>), the genitive marks possession (e.g. John'<i>s</i> dog), the dative marks the indirect object of a clause (the recipient of the
+                    e.g. I kicked the <i>ball</i>), the genitive marks possession (e.g. <i>John's</i> dog), the dative marks the indirect object of a clause (the recipient of the
                     direct object or the beneficiary of the verb, e.g. I gave the book to <i>him</i>), the adpositional marks the object of an adposition (e.g. on the <i>chair</i>),
                     and the instrumental marks a noun that was used to perform something (e.g. I hit it with a <i>hammer</i>).
                 </b>
