--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                             </tr>
                             <tr>
                                 <th>Instrumental</th>
-                                <td>-(n)u</td>
+                                <td>-wu</td>
                             </tr>
                         </table>
                     </td>
@@ -683,7 +683,7 @@
                             </tr>
                             <tr>
                                 <th>Instrumental</th>
-                                <td>-(n)u</td>
+                                <td>-wu</td>
                             </tr>
                         </table>
                     </td>
@@ -695,7 +695,10 @@
                     Now what do all of these fancy cases do? The nominative case marks the subject of a clause, the accusative marks the direct object (the noun that receives the object
                     e.g. I kicked the <i>ball</i>), the genitive marks possession (e.g. <i>John's</i> dog), the dative marks the indirect object of a clause (the recipient of the
                     direct object or the beneficiary of the verb, e.g. I gave the book to <i>him</i>), the adpositional marks the object of an adposition (e.g. on the <i>chair</i>),
-                    and the instrumental marks a noun that was used to perform something (e.g. I hit it with a <i>hammer</i>).
+                    and the instrumental marks a noun that was used to perform something (e.g. I hit it with a <i>hammer</i>). The instrumental is special because it could either be
+                    marked with <i>-nu</i> or <i>-wu</i>. There does not seem to have been specific cases to which one or the other were used, with speakers often switching
+                    between both suffixes in conversation and writing. This is probably because of an ambiguous analysis of the word "wu," meaning with. This word got suffixed onto
+                    nouns to form the instrumental case.
                 </b>
             </p>
 
