--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </b>
             </p>
 
-            <h4>
+            <!-- <h4>
                 <strong>
                     Language
                 </strong>
@@ -702,7 +702,7 @@
                 </b>
             </p>
 
-        </div>
+        </div> -->
 
 </body>
 </html>
