--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
                     one of the most Populous Pink Coast settlements of the time.
                 </strong>
             </p>
+
+            <img src="https://blended-mann.github.io/posts-id-7/PinkCoast.png">
+            <p style="text-align: center; font-size: 5">
+                <i>
+                    Area in pink is the Pink Coast
+                </i>
+            </p>
+
             <p>
                 <strong>
                     Around 246, one of the most famous written works was created: the Follicle Saga. In its full form, it would have detailed the creation of the world
@@ -182,6 +190,33 @@
                     Coast and in the inland Prairies. This coincided with the development of many distinct dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
                     and 3ʳᵈ Centuries — in these regions. Trends in the few written records we have suggest that the Pink Bay Dialect was the standard in literary tradition
                     and governance.
+                </b>
+            </p>
+
+            <h4>
+                <strong>
+                    Literature
+                </strong>
+            </h4>
+
+            <p>
+                <b>
+                    Early Folliccanese literature is hard to find, but we still have some works. It mostly consisted of epic poems.
+                    These poems relied heavily on the concepts of alliteration and rhythm,rather than rhyming, to achieve euphony.
+                    Most works were mythological stories, most notably the Follicle Saga, but we know of others that have existed. From these we can gather they worshipped the First Follicles as deities.
+                    There was also some coconut entity they believed inhabited the forests,
+                    and that they feared greatly. Whether or not this was in any way related to the rise of the coconuts and the Great Coconut War of the 5th Century
+                    is up for debate, though it is widely believed that these myths did in some way foreshadow these events. Besides these factoids, there is not much
+                    information or research in Folliccanese literature.
+                </b>
+            </p>
+
+            <p>
+                <b>
+                    We wish we could say more about this era, but we can't; partially because there isn't enough research, partially because it's been so long since
+                    that era; and partially because us humans have a hard time getting info from the Follicle Realm. This post was originally going to be longer, but
+                    we've decided the language section will have it's own separate section of Follicle News. If you want to read it, it's in the comments of this
+                    html file. Just beware ... it's poorly researched.
                 </b>
             </p>
 
