Uncomment section in index.htmlsadsdfghjkl;;’

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </b>
             </p>
 
-            <!-- <h4>
+            <h4>
                 <strong>
                     Language
                 </strong>
@@ -737,7 +737,7 @@
                 </b>
             </p>
 
-        </div> -->
+        </div> 
 
 </body>
 </html>
